fixed column spacing issue of the temple card grid by changing a css width rule to a max-width rule

--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -113,7 +113,6 @@ nav {
     row-gap: 1rem;
     column-gap: 1rem;
     padding: 1rem;
-    margin: 0 auto;
 }
 
 .album-grid figure {
@@ -138,7 +137,7 @@ footer {
     text-align: center;
     padding: 1rem;
     background-color: #eeeeee;
-    width: 240px;
+    max-width: 240px;
 }
 
 .temple-card>h3 {
